# scenerecognition

./: CMakeLists.txt  README.md  package.xml
include/scene_recognition/: config.h
rviz/: segment.rviz
src/: config.cpp  logging.cpp  scenerecognition.cpp  utils_vector.cpp
